# python-inject-test

./: Makefile  mypy.ini  pyproject.toml  test.py
