[tool.poetry]
name = "inject-test"
version = "0.1.0"
description = ""
authors = ["r-koizumi <r-koizumi@mi-labo.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
Inject = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
